# kosmorro

./: .all-contributorsrc  .coveragerc  .editorconfig  .gitignore  .gitpod.yml  .pylintrc  AppImageBuilder.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  MANIFEST.in  Makefile  Pipfile  README.md  config-comlipy.yml  dumper.py  ephemeris.py  kosmorro  kosmorro-gui  kosmorro.desktop  kosmorro.py  main.py  pyproject.toml  setup-gui-app.py  setup.cfg  setup.py
.dependabot/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  event-type-proposal.md  feature_request.md  feature_request.yml  suggest_event_type.yml
.github/assets/release/aur/: PKGBUILD.template.sh  SRCINFO.template
.github/workflows/: appimage.yml  black.yml  codeql-analysis.yml  commitlint.yml  dockerfile.yml  e2e.yml  i18n.yml  manpage.yml  pylint.yml  pythonapp.yml  release.yml  semantic-pr.yml  stale.yml  tests.yml  unit-tests.yml
.scripts/: tests-e2e.sh
_kosmorro/: __version__.py  date.py  debug.py  dumper.py  environment.py  exceptions.py  geolocation.py  main.py  terms.py  utils.py
_kosmorro/assets/pdf/: template.tex
_kosmorro/i18n/: strings.py  utils.py
_kosmorro/locales/: messages.pot
_kosmorro/locales/de/LC_MESSAGES/: messages.po
_kosmorro/locales/en_XA/LC_MESSAGES/: messages.po
_kosmorro/locales/es/LC_MESSAGES/: messages.po
kosmorro/: __main__.py  date.py  dumper.py  environment.py  exceptions.py  geolocation.py  utils.py  version.py
kosmorro/assets/latex/: template.tex
kosmorro/assets/pdf/: kosmorro.sty  template.tex
kosmorro/i18n/: strings.py  utils.py
kosmorro/locales/: messages.pot
kosmorrolib/: __init__.py  core.py  data.py  dateutil.py  dependencies.py  dumper.py  enum.py  ephemerides.py  events.py  exceptions.py  i18n.py  main.py  version.py
kosmorrolib/assets/pdf/: kosmorro.sty  template.tex
kosmorrolib/gui/: mainwindow.py  panel.py  positionwindow.py
kosmorrolib/locales/: de.po  es.po  fr.po  messages.pot  nb_NO.po  nl.po  ru.po
manpage/: README.md  kosmorro.1.md  kosmorro.7.md
test/: __init__.py  core.py  data.py  dateutil.py  dumper.py  ephemerides.py  events.py  testutils.py
tests/: __init__.py  basic_command.py  completion.py  dates.py  dates.t  events.py  general.py  output.py  position.py  position.t  test_dates.py  test_general.py  test_output.py  test_position.py  test_timezone.py  testutil.py  timezone.py  utils.py
tests/outputs/: 2020-01-27-with-position.tex
(+19 files in other folders)
