[tool.poetry]
name = "kosmorro"
version = "0.10.12"
description = "A program to compute the ephemerides."
authors = ["Jérôme Deuchnord <jerome@deuchnord.fr>"]
license = "AGPL-3.0-or-later"

include = [
    "CHANGELOG.md",
    "kosmorro/locales/*/LC_MESSAGES/*.mo",
    "kosmorro/assets",
]

[tool.poetry.scripts]
kosmorro = 'kosmorro.__main__:main'

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
tabulate = ">=0.8,<0.10"
termcolor = ">=1.1,<3.0"
kosmorrolib = "^1.0"
python-dateutil = "^2.8"
Babel = "^2.9"
importlib-metadata = ">=4.11,<7.0"

[tool.poetry.dev-dependencies]
black = "^23.1"
pytest = "^7.3"
aurornis = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
