[project]
name = "kosmorro"
version = "1.0.2"
description = "A program to compute the ephemerides."
authors = [
    { "name" = "Jérôme Deuchnord", "email" = "jerome@deuchnord.fr>" }
]
license = "AGPL-3.0-or-later"
readme = "README.md"

requires-python = "^3.12"
dependencies = [
    "tabulate (>=0.8,<0.11)",
    "termcolor (>=3.0,<4.0)",
    "kosmorrolib (>=1.0,<2.0)",
    "python-dateutil (>=2.8,<3.0)",
    "Babel (>=2.9,<3.0)",
    "pytz (>=2025.2,<2027.0)",
    "argcomplete (>=3.6.2,<4.0)",
]

include = [
    { path = "kosmorro/locales/**/*.mo", format=["sdist", "wheel"] },
    { path = "kosmorro/assets", format=["sdist", "wheel"] },
]

[project.scripts]
kosmorro = 'kosmorro.__main__:main'

[tool.poetry.group.dev.dependencies]
black = ">=24.8,<27.0"
pytest = ">=8.3,<10.0"
aurornis = "^1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
